--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
 version: "3.8"
 services:
-  reward-watchdog:
+  reward-watcher:
     build: .
     environment:
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
       TELEGRAM_CHAT_ID: ${TELEGRAM_CHAT_ID}
     command:
       [
-        "/app/reward-watchdog",
+        "/app/reward-watcher",
         "--delay=2h",
         "--notify-interval=1h",
         "<orchestrator-address>",
         "wss://arb1.arbitrum.io/ws",
       ]
-    volumes:
-      - ./ABI:/app/ABI
